# ante-preview

./: AGENTS.md  CHANGELOG.md  Cargo.toml  PRODUCTION_AGENT_DEPLOYMENT_NOTES.md  README.md
.github/: dependabot.yml
.specify/: feature.json
ante-test/: ANTE_LIVE_TEST_REPORT.md  agent-run-smoke.md  ante-code-audit-deepseek.md  ante-general-smoke.json  ante-general-smoke.md  results.csv  results.json  test_multi_agent.py  test_multi_agent_workflow.py  workflow_results.json
archive/: INSTRUCTIONS.md  PROJECT.md
crates/agent-sdk/: Cargo.toml  README.md
crates/agent-sdk/src/: budget.rs  compat.rs  event.rs  hitl.rs  init.rs  lib.rs  router.rs  settings.rs
crates/agent-sdk/src/agents/: broker.rs  decomposer.rs  dispatcher.rs  loader.rs  mod.rs  synthesizer.rs
crates/agent-sdk/src/hooks/: blocklist.sh  command.rs  mcp_tool.rs  mod.rs  pre_compact.py  prompt.rs  registry.rs  session_end.py
crates/agent-sdk/src/mcp/: client.rs  mod.rs  registry.rs
crates/agent-sdk/src/memory/: hooks.rs  mod.rs  server.rs  store.rs
crates/agent-sdk/src/sessions/: mod.rs
crates/agent-sdk/src/ui/: diagram.rs  mod.rs  todo.rs
crates/ante/: Cargo.toml
crates/ante/src/: main.rs  mcp_server.rs  status.rs
crates/ante/tests/: decomposition_test.rs  intercom_test.rs  memory_test.rs  permission_test.rs  router_test.rs  subagent_hook_test.rs  todo_test.rs
crates/protocol-shape/: Cargo.toml
crates/protocol-shape/src/: decision.rs  error.rs  event.rs  lib.rs  msg.rs  payload.rs  settings.rs
docs-site/: package-lock.json  package.json  sidebars.ts
modules/: karpathy-wiki
(+57 files in other folders)
