[package]
name = "agent-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
ante-protocol-shape = { path = "../protocol-shape" }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
which = "8.0.0"

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
tempfile = "3"
