[package]
name = "ante"
version = "0.1.0"
edition = "2024"
description = "Ante — extensible agent runtime wrapping Claude Code"
license = "Apache-2.0"

[dependencies]
agent-sdk = { path = "../agent-sdk" }
ante-exec = { path = "../exec" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ante-protocol-shape = { version = "0.1.0", path = "../protocol-shape" }

[dev-dependencies]
tempfile = "3"
