[package]
name = "ante-protocol-shape"
version = "0.1.0"
edition = "2024"
description = "Protocol schema and wire message shapes for Ante"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = "1.2"
